--- a/guitar-practice-counter/index.css
+++ b/guitar-practice-counter/index.css
@@ -10,6 +10,7 @@
 body {
     background-image: url("https://images.unsplash.com/photo-1471478331149-c72f17e33c73?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80");
     background-repeat: no-repeat;
+    background-size: cover;
     font-family: monospace;
     font-weight: bold;
     text-align: center;
@@ -56,4 +57,3 @@ button {
 #save-el {
     font-size: 1.5rem;
 }
-
